# blog

./: .env.example  .gitignore  DEVELOPMENT_PLAN.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  quick-redeploy.sh  redeploy.sh
backend/: .air.toml  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/config/: config.example.yaml
backend/internal/config/: config.go
backend/internal/handler/: article_handler.go  auth_handler.go  backup_handler.go  category_handler.go  (+9 more)
backend/migrations/: 001_init_schema.sql  002_add_indexes.sql  003_add_fulltext_search.sql  004_add_triggers.sql  005_add_init_data.sql  006_add_performance_indexes.sql
data/: README.md
docker/nginx/: nginx.conf
docker/postgres/: postgresql.conf
docker/redis/: redis.conf
docs/: DEPLOYMENT.md  DEVELOPMENT.md
frontend/: Dockerfile  Dockerfile.dev  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  components.d.ts  main.js
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: crawler_example.py  monitor_example.py  task_reporter_example.py
python-sdk/src/blog_sdk/: __init__.py
python-sdk/src/blog_sdk/crawler/: __init__.py  crawler.py  task_reporter.py
python-sdk/src/blog_sdk/monitor/: __init__.py  monitor.py
python-sdk/src/blog_sdk/utils/: __init__.py  config.py  http_client.py
scripts/: backup-db.sh  clean.sh  deploy.sh  health-check.sh  init-config.sh  logs.sh  restore-db.sh  setup-ssl.sh  start-dev.sh  start.sh  stop-dev.sh  stop.sh
(+124 files in other folders)
